update docker storm 0.9.6

--- a/container/docker-storm-raspberrypi/zookeeper/zookeeper/conf/zoo.cfg
+++ b/container/docker-storm-raspberrypi/zookeeper/zookeeper/conf/zoo.cfg
@@ -14,7 +14,7 @@ dataDir=/tmp/zookeeper
 clientPort=2181
 # the maximum number of client connections.
 # increase this if you need to handle more clients
-#maxClientCnxns=60
+maxClientCnxns=60
 #
 # Be sure to read the maintenance section of the 
 # administrator guide before turning on autopurge.
@@ -33,4 +33,5 @@ clientPort=2181
 #metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider
 #metricsProvider.httpPort=7000
 #metricsProvider.exportJvmInfo=true
-
+4lw.commands.whitelist=stat, ruok, conf, isro
+4lw.commands.whitelist=*
